--- a/style.css
+++ b/style.css
@@ -1,126 +1,116 @@
-
-@import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
-
 body {
-  color: #555;
   margin: 0;
+  background-color: #f2f3f4;
+  font-family: tahoma;
 
-  font-family: 'Montserrat', sans-serif;
 }
 
 #header {
-  background-color: #1abc9c;
-  height: 150px;
-  line-height: 150px;
+  padding-top: 150px;
 }
 
-#header a {
-  color: white;
-  text-decoration: none;
-
-  text-transform: uppercase;
-  letter-spacing: 0.1em;
-}
-
-#header a:hover {
-  color: #222;
-}
-
-#header-title {
-  display: block;
-  float: left;
-  font-size: 20px;
+#header h1{
+  color: #337cff;
+  font-size: 55px;
   font-weight: bold;
 }
 
-#header-nav {
-  display: block;
-  float: right;
-  margin-top: 0;
-}
-
-#header-nav li {
-  display: inline;
-  padding-left: 20px;
-}
-
-.container {
+#fb {
+  margin-left: 400px;
   max-width: 1000px;
-  margin: 0 auto;
+  display: inline-block;
+  line-height: 30px;
 }
 
-#footer {
-  background-color: #2f2f2f;
-  padding: 50px 0;
+#text {
+  font-size: 30px;
 }
 
 .column {
   min-width: 300px;
   display: inline-block;
   vertical-align: top;
+  margin-left: 100px;
 }
 
-#footer h4 {
-  color: white;
-  text-transform: uppercase;
-  letter-spacing: 0.1em;
-}
-
-#footer p {
-  color: white;
-}
-
-a {
-  color: #1abc9c;
+.column a {
   text-decoration: none;
+  color: #3d89e6;
 }
 
-a:hover {
-  color: #F6A623;
-}
-
-.post, .about {
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 60px 0;
-}
-
-.post-author img {
-  width: 50px;
-  height: 50px;
-  vertical-align: middle;
-}
-
-.post-author span {
-  margin-left: 16px;
-}
-
-.post-date {
-  color: #D2D2D2;
-
-  font-size: 14px;
+.column p a {
+  color: black;
   font-weight: bold;
-
-  text-transform: uppercase;
-  letter-spacing: 0.1em;s
 }
 
-h1, h2, h3, h4 {
-  color: #333;
+input {
+  height: 50px;
+  width: 380px;
+  border-radius: 10px;
+  border: 0.5px solid #d0d3d4;
 }
 
-p {
-  line-height: 1.5;
+input:hover {
+  cursor: auto;
 }
 
-.about {
+::placeholder {
+  font-size: 15px;
+  padding-left: 10px;
+  color: #979a9a;
+}
+
+#log {
+  background-color: white;
+  text-align: center;
+  padding: 20px;
+  border-radius: 10px;
+}
+
+button:hover {
+  cursor: pointer;
+}
+#login {
+  background-color: #337cff;
+  width: 400px;
+  height: 50px;
+  font-size: 20px;
+  font-weight: bold;
+  border: none;
+  color: white;
+  border-radius: 10px;
+}
+
+#new-acc {
+  background-color: #35BD57;
+  width: 300px;
+  height: 50px;
+  font-size: 20px;
+  font-weight: bold;
+  border: none;
+  color: white;
+  border-radius: 10px;
+}
+
+#celebrity {
+  font-size: 15px;
   text-align: center;
 }
 
-.post-author img, .about-author img {
-  border-radius: 50%;
+#footer {
+  clear: both;
+  background-color: white;
+  margin-top: 200px;
+  bottom: 0;
+  height: 200px;
+  padding: 10px 200px auto 200px;
+
 }
 
-.psot-container:nth-child(even) {
-  background-color: #f2f2f2;
+#footer a {
+  margin-left: 10px;
+  padding: 10px 200px auto 200px;
+
+  text-decoration: none;
+  color: #7b7d7d;
 }
